--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,15 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: monospace, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f8f8f8;
+  background-color: #080b14;
+  color: white;
 }
 
 a {
   text-decoration: none;
-  color: inherit;
+  color: white;
 }
 
 li {
