--- a/src/pages/MoviePage/MoviesPage.module.css
+++ b/src/pages/MoviePage/MoviesPage.module.css
@@ -3,5 +3,25 @@
   height: 30px;
   border-radius: 5px;
   border: 1px solid grey;
-  margin-right: 10px;
+  margin: 20px;
+  background-color: #080b14;
+  color: white;
+  padding: 10px 5px;
+  font-size: 20px;
+}
+
+.input:focus {
+  outline: none;
+}
+
+.button {
+  padding: 15px 35px;
+  font-size: 20px;
+  border-radius: 5px;
+  background-color: transparent;
+  color: white;
+  border: 3px solid rgb(15, 70, 15);
+  box-shadow: 5px 2px 2px rgb(15, 70, 15);
+  cursor: pointer;
+  margin: 20px;
 }
